# fastapi-auth-cookiecutter

./: .flake8  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: flake8.yml  flake8_pytest.yml
app/: auth.py  db.py  main.py  settings.py
app/api/: auth.py  db.py
app/api/exceptions/: base.py  users.py
app/api/models/: __init__.py  users.py
app/api/repositories/: base.py  users.py
app/api/routers/: __init__.py  auth.py  healthcheck.py  users.py
app/api/schemas/: errors.py  token.py  users.py
app/api/services/: users.py
app/tests/: conftest.py  test_auth_router.py  test_healthcheck_router.py  test_main.py  test_users_router.py
docker/: Dockerfile  start.sh
docker/dev/env_vars/: public
docker/test/env_vars/: private  public
migrations/: env.py
migrations/versions/: 39914183581a_init.py
